Login modificado solo para ing rapido, gv falta el ddl, servicio a Pascal y no se llena ViewState

--- a/VisualStudio/VirtualShop.csproj
+++ b/VisualStudio/VirtualShop.csproj
@@ -58,6 +58,7 @@
     <Content Include="VS\img\Cheeck.png" />
     <Content Include="VS\img\icn_alert_error.png" />
     <Content Include="VS\img\icn_alert_success.png" />
+    <Content Include="VS\Presentacion\WebForm1.aspx" />
     <Content Include="VS\Script\jquery-1.4.1-vsdoc.js" />
     <Content Include="VS\Script\jquery-1.4.1.js" />
     <Content Include="VS\Script\jquery-1.4.1.min.js" />
@@ -139,6 +140,13 @@
     </Compile>
     <Compile Include="VS\Presentacion\Perfil.aspx.designer.cs">
       <DependentUpon>Perfil.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="VS\Presentacion\WebForm1.aspx.cs">
+      <DependentUpon>WebForm1.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="VS\Presentacion\WebForm1.aspx.designer.cs">
+      <DependentUpon>WebForm1.aspx</DependentUpon>
     </Compile>
     <Compile Include="VS\Servicio\CategoriaServicio.cs" />
     <Compile Include="VS\Servicio\VentaServicio.cs" />
