--- a/VisualStudio/VirtualShop.csproj
+++ b/VisualStudio/VirtualShop.csproj
@@ -59,6 +59,7 @@
     <Content Include="VS\img\icn_alert_error.png" />
     <Content Include="VS\img\icn_alert_success.png" />
     <Content Include="VS\Presentacion\WebForm1.aspx" />
+    <Content Include="VS\Presentacion\confirmaRegistro.aspx" />
     <Content Include="VS\Script\jquery-1.4.1-vsdoc.js" />
     <Content Include="VS\Script\jquery-1.4.1.js" />
     <Content Include="VS\Script\jquery-1.4.1.min.js" />
@@ -133,6 +134,13 @@
     </Compile>
     <Compile Include="VS\captcha\captcha.aspx.designer.cs">
       <DependentUpon>captcha.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="VS\Presentacion\confirmaRegistro.aspx.cs">
+      <DependentUpon>confirmaRegistro.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="VS\Presentacion\confirmaRegistro.aspx.designer.cs">
+      <DependentUpon>confirmaRegistro.aspx</DependentUpon>
     </Compile>
     <Compile Include="VS\Presentacion\Perfil.aspx.cs">
       <DependentUpon>Perfil.aspx</DependentUpon>
