Igualando el Script al entregado
Ahora está igual al que se entregó

--- a/VisualStudio/Web.config
+++ b/VisualStudio/Web.config
@@ -15,6 +15,6 @@
 	<add name="VirtualShopConnectionString"
 	 connectionString="Data Source=SERGIO-HP;Initial Catalog=VirtualShop;Integrated Security=True;"
 	 providerName="System.Data.SqlClient"/>
-	  <!--<add name="VirtualShopEntities" connectionString="metadata=res://*/VS.Datos.Model1.csdl|res://*/VS.Datos.Model1.ssdl|res://*/VS.Datos.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MAXI-HP;initial catalog=VirtualShop;integrated security=True;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+	  <add name="VirtualShopEntities" connectionString="metadata=res://*/VS.Datos.Model1.csdl|res://*/VS.Datos.Model1.ssdl|res://*/VS.Datos.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MAXI-HP;initial catalog=VirtualShop;integrated security=True;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
