--- a/VisualStudio/VirtualShop.csproj
+++ b/VisualStudio/VirtualShop.csproj
@@ -37,6 +37,7 @@
     <Reference Include="System.Data.Entity" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -54,10 +55,15 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="404.jpg" />
+    <Content Include="NoSuchPage.htm" />
     <Content Include="VS\img\Cancel.png" />
     <Content Include="VS\img\Cheeck.png" />
     <Content Include="VS\img\icn_alert_error.png" />
     <Content Include="VS\img\icn_alert_success.png" />
+    <Content Include="VS\img\icn_jump_back.png" />
+    <Content Include="VS\js\jquery.leanModal.min.js" />
+    <Content Include="VS\Presentacion\adminTiendas.aspx" />
     <Content Include="VS\Presentacion\confirmaRegistro.aspx" />
     <Content Include="VS\Script\jquery-1.4.1-vsdoc.js" />
     <Content Include="VS\Script\jquery-1.4.1.js" />
@@ -112,15 +118,38 @@
     <Content Include="VS\Presentacion\compras.aspx" />
     <Content Include="VS\Presentacion\ventasConf.aspx" />
     <Content Include="VS\userControls\ucElegirCategoria.ascx" />
-    <Content Include="Web.config" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+    <None Include="Web References\VirtualShopWS\Producto.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </None>
+    <None Include="Web References\VirtualShopWS\Reference.map">
+      <Generator>MSDiscoCodeGenerator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+    <None Include="Web References\VirtualShopWS\Service1.disco" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
+    <None Include="Web References\VirtualShopWS\Service1.wsdl" />
+    <None Include="Web References\VirtualShopWS\Tienda.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
     <Compile Include="VS\Datos\AccesoADatos.cs" />
     <Compile Include="VS\Entidad\Categoria.cs" />
     <Compile Include="VS\Entidad\Venta.cs" />
@@ -133,6 +162,13 @@
     </Compile>
     <Compile Include="VS\captcha\captcha.aspx.designer.cs">
       <DependentUpon>captcha.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="VS\Presentacion\adminTiendas.aspx.cs">
+      <DependentUpon>adminTiendas.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="VS\Presentacion\adminTiendas.aspx.designer.cs">
+      <DependentUpon>adminTiendas.aspx</DependentUpon>
     </Compile>
     <Compile Include="VS\Presentacion\confirmaRegistro.aspx.cs">
       <DependentUpon>confirmaRegistro.aspx</DependentUpon>
@@ -238,6 +274,11 @@
     <Compile Include="VS\Presentacion\ventasConf.aspx.designer.cs">
       <DependentUpon>ventasConf.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Web References\VirtualShopWS\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.map</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Web.sitemap">
@@ -250,6 +291,25 @@
   <ItemGroup>
     <Folder Include="VS\photos\" />
   </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WebReferences Include="Web References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WebReferenceUrl Include="http://localhost:56475/Service1.asmx">
+      <UrlBehavior>Dynamic</UrlBehavior>
+      <RelPath>Web References\VirtualShopWS\</RelPath>
+      <UpdateFromURL>http://localhost:56475/Service1.asmx</UpdateFromURL>
+      <ServiceLocationURL>
+      </ServiceLocationURL>
+      <CachedDynamicPropName>
+      </CachedDynamicPropName>
+      <CachedAppSettingsObjectName>Settings</CachedAppSettingsObjectName>
+      <CachedSettingsPropName>VisualStudio_VirtualShopWS_Service1</CachedSettingsPropName>
+    </WebReferenceUrl>
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
   <ProjectExtensions>
@@ -258,7 +318,7 @@
         <WebProjectProperties>
           <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>3384</DevelopmentServerPort>
+          <DevelopmentServerPort>56472</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
           <IISUrl>
           </IISUrl>
