--- a/VisualStudio/Web.config
+++ b/VisualStudio/Web.config
@@ -4,17 +4,35 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <configSections>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="VisualStudio.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
   <system.web>
     <compilation debug="true" targetFramework="4.0">
       <assemblies>
         <add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
       </assemblies>
     </compilation>
+	  <customErrors mode ="On">
+		  <error statusCode="404" redirect="NoSuchPage.htm"/>
+	  </customErrors>
   </system.web>
-  <connectionStrings>
-	<add name="VirtualShopConnectionString"
-	 connectionString="Data Source=SERGIO-HP;Initial Catalog=VirtualShop;Integrated Security=True;"
-	 providerName="System.Data.SqlClient"/>
-	  <add name="VirtualShopEntities" connectionString="metadata=res://*/VS.Datos.Model1.csdl|res://*/VS.Datos.Model1.ssdl|res://*/VS.Datos.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MAXI-HP;initial catalog=VirtualShop;integrated security=True;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+	<connectionStrings>
+		<add name="VirtualShopConnectionString"
+		  connectionString="Data Source=SERGIO-HP;Initial Catalog=VirtualShop;Integrated Security=True;"
+		  providerName="System.Data.SqlClient"/>
+	</connectionStrings>
+  <system.serviceModel>
+    <bindings />
+    <client />
+  </system.serviceModel>
+  <applicationSettings>
+    <VisualStudio.Properties.Settings>
+      <setting name="VisualStudio_VirtualShopWS_Service1" serializeAs="String">
+        <value>http://localhost:56475/Service1.asmx</value>
+      </setting>
+    </VisualStudio.Properties.Settings>
+  </applicationSettings>
 </configuration>
