--- a/VisualStudio/Web.config
+++ b/VisualStudio/Web.config
@@ -15,14 +15,15 @@
         <add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
       </assemblies>
     </compilation>
-	  <customErrors mode ="On">
+	  <customErrors mode="RemoteOnly">
 		  <error statusCode="404" redirect="NoSuchPage.htm"/>
 	  </customErrors>
+	  
   </system.web>
 	<connectionStrings>
 		<add name="VirtualShopConnectionString"
-		  connectionString="Data Source=SERGIO-HP;Initial Catalog=VirtualShop;Integrated Security=True;"
-		  providerName="System.Data.SqlClient"/>
+    connectionString="Data Source=SERGIO-HP;Initial Catalog=VirtualShop;Integrated Security=True;"
+    providerName="System.Data.SqlClient"/>
 	</connectionStrings>
   <system.serviceModel>
     <bindings />
@@ -30,8 +31,8 @@
   </system.serviceModel>
   <applicationSettings>
     <VisualStudio.Properties.Settings>
-      <setting name="VisualStudio_VirtualShopWS_Service1" serializeAs="String">
-        <value>http://localhost:56475/Service1.asmx</value>
+      <setting name="VisualStudio_localhost_WebService1" serializeAs="String">
+        <value>http://localhost:56472/VS/WS/WebService1.asmx</value>
       </setting>
     </VisualStudio.Properties.Settings>
   </applicationSettings>
