--- a/VisualStudio/Properties/Settings.settings
+++ b/VisualStudio/Properties/Settings.settings
@@ -2,8 +2,8 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="VisualStudio.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="VisualStudio_VirtualShopWS_Service1" Type="(Web Service URL)" Scope="Application">
-      <Value Profile="(Default)">http://localhost:56475/Service1.asmx</Value>
+    <Setting Name="VisualStudio_localhost_WebService1" Type="(Web Service URL)" Scope="Application">
+      <Value Profile="(Default)">http://localhost:56472/VS/WS/WebService1.asmx</Value>
     </Setting>
   </Settings>
 </SettingsFile>
